// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`snapshots physical layer choices in ti-pmp22650-main.PcbDoc 1`] = `
[
  "board: Complete board",
  "TOP: Layer 1",
  "MID5: Layer 2",
  "MID1: Layer 3",
  "MID2: Layer 4",
  "MID3: Layer 5",
  "MID4: Layer 6",
  "MID6: Layer 7",
  "BOTTOM: Layer 8",
  "TOPPASTE: Top paste",
  "TOPOVERLAY: Top overlay",
  "TOPSOLDER: Top solder mask",
  "BOTTOMSOLDER: Bottom solder mask",
  "BOTTOMOVERLAY: Bottom overlay",
  "BOTTOMPASTE: Bottom paste",
  "DRILLGUIDE: Drill Guide",
  "KEEPOUT: Keepout",
  "MECHANICAL1: M1 Board Outline",
  "MECHANICAL2: M2 Board Dimensions",
  "MECHANICAL3: M3 3D STEP Top",
  "MECHANICAL4: M4 3D STEP Bottom",
  "MECHANICAL5: M5 Assembly Top",
  "MECHANICAL6: M6 Assembly Bottom",
  "MECHANICAL7: M7 LPKF Text Top",
  "MECHANICAL8: M8 LPKF Text Bottom",
  "MECHANICAL9: M9 Title Sheet",
  "MECHANICAL10: M10 Fab Notes",
  "MECHANICAL11: M11 Gerber Information",
  "MECHANICAL12: M12 Stackup",
  "MECHANICAL13: M13 Component Bodies Top",
  "MECHANICAL14: M14 Component Bodies Bottom",
  "MECHANICAL15: M15 Courtyards Top",
  "MECHANICAL16: M16 Courtyards Bottom",
  "DRILLDRAWING: Drill Drawing",
  "MULTILAYER: Multi-layer",
  "MECHANICAL17: M17 Embedded Cavity",
  "MECHANICAL18: M18 Embedded Assembly",
  "MECHANICAL19: M19 Embedded Keepout",
]
`;

exports[`snapshots physical layer choices in ti-pmp22712.PcbDoc 1`] = `
[
  "board: Complete board",
  "TOP: Top copper",
  "MID1: Signal Layer 1",
  "MID2: Signal Layer 2",
  "BOTTOM: Bottom copper",
  "TOPPASTE: Top paste",
  "TOPOVERLAY: Top overlay",
  "TOPSOLDER: Top solder mask",
  "BOTTOMSOLDER: Bottom solder mask",
  "BOTTOMOVERLAY: Bottom overlay",
  "BOTTOMPASTE: Bottom paste",
  "DRILLGUIDE: Drill Guide",
  "KEEPOUT: Keepout",
  "MECHANICAL1: M1 Board Outline",
  "MECHANICAL2: M2 Board Dimensions",
  "MECHANICAL3: M3 3D STEP Top",
  "MECHANICAL4: M4 3D STEP Bottom",
  "MECHANICAL5: M5 Assembly Top",
  "MECHANICAL6: M6 Assembly Bottom",
  "MECHANICAL7: M7 LPKF Text Top",
  "MECHANICAL8: M8 LPKF Text Bottom",
  "MECHANICAL9: M9 Title Sheet",
  "MECHANICAL10: M10 Fab Notes",
  "MECHANICAL11: M11 Gerber Information",
  "MECHANICAL12: M12 Stackup",
  "MECHANICAL13: M13 Component Bodies Top",
  "MECHANICAL14: M14 Component Bodies Bottom",
  "MECHANICAL15: M15 Courtyards Top",
  "MECHANICAL16: M16 Courtyards Bottom",
  "DRILLDRAWING: Drill Drawing",
  "MULTILAYER: Multi-layer",
  "MECHANICAL17: M17 Embedded Cavity",
  "MECHANICAL18: M18 Embedded Assembly",
  "MECHANICAL19: M19 Embedded Keepout",
]
`;

exports[`snapshots physical layer choices in ti-pmp22773.PcbDoc 1`] = `
[
  "board: Complete board",
  "TOP: Top copper",
  "MID1: GND",
  "MID2: Signal",
  "BOTTOM: Bottom copper",
  "TOPPASTE: Top paste",
  "TOPOVERLAY: Top overlay",
  "TOPSOLDER: Top solder mask",
  "BOTTOMSOLDER: Bottom solder mask",
  "BOTTOMOVERLAY: Bottom overlay",
  "BOTTOMPASTE: Bottom paste",
  "DRILLGUIDE: Drill Guide",
  "KEEPOUT: Keepout",
  "MECHANICAL1: M1 Board Outline",
  "MECHANICAL2: M2 Board Dimensions",
  "MECHANICAL3: M3 3D STEP Top",
  "MECHANICAL4: M4 3D STEP Bottom",
  "MECHANICAL5: M5 Assembly Top",
  "MECHANICAL6: M6 Assembly Bottom",
  "MECHANICAL7: M7 LPKF Text Top",
  "MECHANICAL8: M8 LPKF Text Bottom",
  "MECHANICAL9: M9 Title Sheet",
  "MECHANICAL10: M10 Fab Notes",
  "MECHANICAL11: M11 Gerber Information",
  "MECHANICAL12: M12 Stackup",
  "MECHANICAL13: M13 Component Bodies Top",
  "MECHANICAL14: M14 Component Bodies Bottom",
  "MECHANICAL15: M15 Courtyards Top",
  "MECHANICAL16: M16 Courtyards Bottom",
  "DRILLDRAWING: Drill Drawing",
  "MULTILAYER: Multi-layer",
  "MECHANICAL17: M17 Embedded Cavity",
  "MECHANICAL18: M18 Embedded Assembly",
  "MECHANICAL19: M19 Embedded Keepout",
]
`;

exports[`snapshots physical layer choices in ti-pmp23595.PcbDoc 1`] = `
[
  "board: Complete board",
  "TOP: Layer 1",
  "MID3: GND 1",
  "MID1: Layer 3",
  "MID2: Layer 4",
  "MID4: GND 2",
  "BOTTOM: Layer 6",
  "TOPPASTE: Top paste",
  "TOPOVERLAY: Top overlay",
  "TOPSOLDER: Top solder mask",
  "BOTTOMSOLDER: Bottom solder mask",
  "BOTTOMOVERLAY: Bottom overlay",
  "BOTTOMPASTE: Bottom paste",
  "DRILLGUIDE: Drill Guide",
  "KEEPOUT: Keepout",
  "MECHANICAL1: M1 Board Outline",
  "MECHANICAL2: M2 Board Dimensions",
  "MECHANICAL3: M3 3D STEP Top",
  "MECHANICAL4: M4 3D STEP Bottom",
  "MECHANICAL5: M5 Assembly Top",
  "MECHANICAL6: M6 Assembly Bottom",
  "MECHANICAL7: M7 LPKF Text Top",
  "MECHANICAL8: M8 LPKF Text Bottom",
  "MECHANICAL9: M9 Title Sheet",
  "MECHANICAL10: M10 Fab Notes",
  "MECHANICAL11: M11 Gerber Information",
  "MECHANICAL12: M12 Stackup",
  "MECHANICAL13: M13 Component Bodies Top",
  "MECHANICAL14: M14 Component Bodies Bottom",
  "MECHANICAL15: M15 Courtyards Top",
  "MECHANICAL16: M16 Courtyards Bottom",
  "DRILLDRAWING: Drill Drawing",
  "MULTILAYER: Multi-layer",
  "MECHANICAL17: M17 Embedded Cavity",
  "MECHANICAL18: M18 Embedded Assembly",
  "MECHANICAL19: M19 Embedded Keepout",
]
`;

exports[`snapshots physical layer choices in ti-pmp23653-main.PcbDoc 1`] = `
[
  "board: Complete board",
  "TOP: Top copper",
  "MID1: Layer 2",
  "MID2: Layer 3",
  "BOTTOM: Bottom copper",
  "TOPPASTE: Top paste",
  "TOPOVERLAY: Top overlay",
  "TOPSOLDER: Top solder mask",
  "BOTTOMSOLDER: Bottom solder mask",
  "BOTTOMOVERLAY: Bottom overlay",
  "BOTTOMPASTE: Bottom paste",
  "DRILLGUIDE: Drill Guide",
  "KEEPOUT: Keepout",
  "MECHANICAL1: M1 Board Outline",
  "MECHANICAL2: M2 Board Dimensions",
  "MECHANICAL3: M3 3D STEP Top",
  "MECHANICAL4: M4 3D STEP Bottom",
  "MECHANICAL5: Top Assembly",
  "MECHANICAL6: Bottom Assembly",
  "MECHANICAL7: M7 LPKF Text Top",
  "MECHANICAL8: M8 LPKF Text Bottom",
  "MECHANICAL9: M9 Title Sheet",
  "MECHANICAL10: M10 Fab Notes",
  "MECHANICAL11: M11 Gerber Information",
  "MECHANICAL12: M12 Stackup",
  "MECHANICAL13: M13 Component Bodies Top",
  "MECHANICAL14: M14 Component Bodies Bottom",
  "MECHANICAL15: M15 Courtyards Top",
  "MECHANICAL16: M16 Courtyards Bottom",
  "DRILLDRAWING: Drill Drawing",
  "MULTILAYER: Multi-layer",
  "MECHANICAL17: M17 Embedded Cavity",
  "MECHANICAL18: M18 Embedded Assembly",
  "MECHANICAL19: M19 Embedded Keepout",
]
`;

exports[`snapshots physical layer choices in ti-pmp23653-planar-transformer.PcbDoc 1`] = `
[
  "board: Complete board",
  "TOP: Top copper",
  "MID1: Int1",
  "MID2: Int2",
  "MID3: Int3",
  "MID4: Int4",
  "BOTTOM: Bottom copper",
  "TOPPASTE: Top paste",
  "TOPOVERLAY: Top overlay",
  "TOPSOLDER: Top solder mask",
  "BOTTOMSOLDER: Bottom solder mask",
  "BOTTOMOVERLAY: Bottom overlay",
  "BOTTOMPASTE: Bottom paste",
  "DRILLGUIDE: Drill Guide",
  "KEEPOUT: Keepout",
  "MECHANICAL1: M1 Board Outline",
  "MECHANICAL2: M2 Board Dimensions",
  "MECHANICAL3: M3 3D STEP Top",
  "MECHANICAL4: M4 3D STEP Bottom",
  "MECHANICAL5: M5 Assembly Top",
  "MECHANICAL6: M6 Assembly Bottom",
  "MECHANICAL7: M7 LPKF Text Top",
  "MECHANICAL8: M8 LPKF Text Bottom",
  "MECHANICAL9: M9 Title Sheet",
  "MECHANICAL10: M10 Fab Notes",
  "MECHANICAL11: M11 Gerber Information",
  "MECHANICAL12: M12 Stackup",
  "MECHANICAL13: M13 Component Bodies Top",
  "MECHANICAL14: M14 Component Bodies Bottom",
  "MECHANICAL15: M15 Courtyards Top",
  "MECHANICAL16: M16 Courtyards Bottom",
  "DRILLDRAWING: Drill Drawing",
  "MULTILAYER: Multi-layer",
  "MECHANICAL17: M17 Embedded Cavity",
  "MECHANICAL18: M18 Embedded Assembly",
  "MECHANICAL19: M19 Embedded Keepout",
]
`;
